<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">悟空清理大师</string>
    <string name="action_settings">Settings</string>
    <string name="short_cuts">已经添加“悟空清理大师兄”快捷方式到桌面，请返回点击看效果!</string>
    <string name="tips">你的设备已加速！</string>
    <string name="clean_speed_up">提速</string>
    <string name="clean_memory">释放内存</string>
    <string name="clean_finish">清理完成</string>
    <string name="clean_ing">正在清理</string>
    <string name="clean_memory_def">0Mb</string>
    <string name="clean_speed_up_def">0%</string>
    <string name="title_activity_picasso">PicassoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>