<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/framelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00000000"
    android:padding="50dp"
    android:clipToPadding="false"
    android:clipChildren="false">
    <RelativeLayout
        android:id="@+id/clean_info"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/clean_bg"
        android:visibility="gone">

        <TextView android:id="@+id/speed_percent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_speed_up"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/clean_info_text_color"/>

        <TextView android:id="@+id/speed_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speed_percent_text"
            android:layout_marginLeft="30dp"
            android:text="@string/clean_speed_up_def"
            android:textSize="30sp"
            android:textColor="@android:color/background_light"/>

        <TextView android:id="@+id/clean_memeory_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="30dp"
            android:text="@string/clean_memory"
            android:layout_below="@+id/speed_percent"
            android:textSize="20sp"
            android:textColor="@color/clean_info_text_color"/>

        <TextView android:id="@+id/clean_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/clean_memory_def"
            android:layout_below="@+id/clean_memeory_text"
            android:textSize="30sp"
            android:textColor="@android:color/background_light"/>

        <TextView android:id="@+id/finish_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_finish"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"
            android:textColor="@color/clean_info_text_color"/>

     </RelativeLayout>
    <RelativeLayout
        android:id="@+id/clean_animation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/clean_bg"
        >

        <ImageView
            android:id="@+id/clean_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/clean_back"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/clean_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clean_rotate"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/clean_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clean_icon"
            android:layout_centerInParent="true"/>

        <TextView android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_ing"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/clean_icon"
            android:textSize="20sp"/>

    </RelativeLayout>
 </FrameLayout>



</FrameLayout>